2016-10-25  Charlie Zender  <zender@uci.edu>

	* Clarify missing value error message for multi-arguments

2016-10-22  Charlie Zender  <zender@uci.edu>

	* Clarify how to create new record dimensions in ncra/ncrcat messages

2016-10-13  Charlie Zender  <zender@uci.edu>

	* ncremap now loads ncl module on edison to find ESMF_RegridWeightGen

2016-10-12  Charlie Zender  <zender@uci.edu>

	* Add HINT to multi-arg error handling, NCO'ize routines

2016-10-11  Charlie Zender  <zender@uci.edu>

	* Suppress all but first WARNING from nco_is_spc_in_cf_att()

2016-10-10  Charlie Zender  <zender@uci.edu>

	* Jerome added support for double-backslash quoting in multi-arguments

2016-10-07  Charlie Zender  <zender@uci.edu>

	* Jerome changed multi-args to use strstr() instead of strtok() or strsep()

2016-10-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.2-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.2-alpha02 final changes';git push
	git tag -a 4.6.2-alpha02 -m 'Version 4.6.2-alpha02 new features: multi-arguments (nco_mta.[ch]), ARFLAGS, LLVM 8.0.0, GCC 6.2.1';git push --tags

	* nco_rgr_ini() now only calls nco_arg_mlt_prs() when rgr_arg_nbr > 0

2016-10-01  Charlie Zender  <zender@uci.edu>

	* Alter nco_mta_get() to initialize delimiter if NULL

	* Makefile sets ARFLAGS to rsUv (U is new) to create non-deterministic library archives
	Prevents GCC toolchain i18n warnings on Ubuntu 16.04 (xenial) and later

2016-09-30  Charlie Zender  <zender@uci.edu>

	* Fix compiler warnings emitted by clang LLVM 8.0.0

	* Update configure.ac MAKEINFO_VERSION to grep for texinfo so MacOS 'texi2any' works

	* #include netcdf_mem.h for nc_open_mem() prototype

	* Fix compiler warnings emitted by GCC 6.2.1

2016-09-26  Charlie Zender  <zender@uci.edu>

	* Fix false-positives in multi-argument regression tests

2016-09-26  Charlie Zender  <zender@uci.edu>

	* Adopt Jerome's implementation of multi-arg for trr, rgr, gaa, ppc

2016-09-23  Charlie Zender  <zender@uci.edu>
